tests/dataset/tpc-h/compiler/kt/q3.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q3.kt:109:23: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun BigDecimal.unaryMinus(): BigDecimal defined in kotlin
@InlineOnly public inline operator fun BigInteger.unaryMinus(): BigInteger defined in kotlin
        mutableListOf(-sum(run {
                      ^
